removed an old file reference, corrected placeholder texts, made typed messages more readable.

--- a/public/stylesheets/lobby.css
+++ b/public/stylesheets/lobby.css
@@ -17,5 +17,5 @@ p {
   color: white;
 }
 input {
-  background-color: #2a2d2f;
+  background-color: white;
 }
